--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+
+{% block content %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,3 +15,5 @@
     <h1>Hello</h1>
 </body>
 </html>
+
+{% endblock %}
