--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,19 +1,31 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
+<div class="col-md-6 offset-md-3 text-center bg-light p-3">
+    
+{% if user.is_authenticated %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
-</html>
+<h1>Hello World</h1>
+
+{% else %}
+    
+    <h1>Login</h1>
+    <br/>
+    <form method="POST" action="{% url 'home' %}"> 
+        {% csrf_token %}
+        <div class="mb-3">
+            <input type="text" class="form-control" name="username" placeholder="Username", required> 
+        </div>
+
+        <div class="mb-3">
+            <input type="password" class="form-control" name="password" placeholder="Password", required> 
+        </div>
+
+        <button type="submit" class="btn btn-dark">Login</button> 
+    </form>
+</div>
+
+{% endif %}
 
 {% endblock %}
