--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -6,12 +6,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
+          
+          {% if user.is_authenticated %}
+          
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href=" {% url 'logout' %} ">Logout</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
+
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href=" {% url 'home' %} ">Login</a>
+            </li>
+
+
+            {% endif %}
+
         </ul>
       </div>
     </div>
