--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -15,6 +15,8 @@
 
             {% else %}
             <li class="nav-item">
+              <a class="nav-link" href=" {% url 'register' %} ">Register</a>
+
               <a class="nav-link" href=" {% url 'home' %} ">Login</a>
             </li>
 
